<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textBox1"
        android:layout_width="364dp"
        android:layout_height="71dp"
        android:text="@string/you_are_going_to_regret_downloading_this"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />

    <TextView
        android:id="@+id/textBox2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/acceleration"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBox1"
        app:layout_constraintVertical_bias="0.204" />

    <TextView
        android:id="@+id/textBox3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:text="@string/peak_acceleration_none"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textBox2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBox1"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/title"
        android:layout_width="304dp"
        android:layout_height="109dp"
        android:gravity="center"
        android:text="@string/screaming_phone_app"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textBox1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:text="@string/stop_the_screams"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBox2"
        app:layout_constraintVertical_bias="0.094" />

</androidx.constraintlayout.widget.ConstraintLayout>